[package]
name = "cosmos"
description = "cosmos"
version = "0.0.1"
authors = ["Graham Lee <ghmlee@cosmos.io>"]
license = "Apache-2.0"
homepage = "https://github.com/cosmoshq/cosmos"
repository = "https://github.com/cosmoshq/cosmos.git"
documentation = "https://cosmoshq.github.io/cosmos/doc/cosmos"
readme = "README.md"
keywords = ["cosmos"]

[dependencies]